@@ -1,4 +1,4 @@
-VERSION=0.77.1-050818
+VERSION=0.77.1-050819
 THISDIR=branch_0
 HOME=.
 
